--- a/metadata.html
+++ b/metadata.html
@@ -79,7 +79,8 @@
     <h1>Makerere University Halls Map Project</h1>
     <h2>Created By: Group 3</h2>
     <p>This project provides a web map of Makerere University Halls, with each hall’s location marked and labeled. It was designed as a user-friendly tool for exploring the university's campus facilities.</p>
-
+     <h3>How it works</h3>
+      <p> On the web map click on the hall and get directions from your location (red). click on the image to see the hall </p>
     <div class="info-section">
       <h3>Project Details</h3>
       <p><strong>Date of Creation:</strong> November 7, 2024</p>
